Update : 클라우드 설정 변경

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <form
-      action="http://203.232.200.71:2000/post"
+      action="http://localhost:2000/"
       method="post"
       enctype="multipart/form-data"
     >
-      <input type="text" name="inputValue" />
+      <input type="file" name="file" />
       <button type="submit">qd</button>
     </form>
   </body>
